[workspace]
members = [
    'ilquentir-bot',
    'ilquentir-config',
    'ilquentir-giphy',
    'ilquentir-messages',
    'ilquentir-models',
]

[workspace.package]
version = "0.7.1"
authors = ["utterstep"]

[workspace.dependencies]
dotenvy = "0.15"
color-eyre = "0.6"
envy = "0.4"
futures = "0.3"
once_cell = "1"
tracing = "0.1"
tracing-tree = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "parking_lot"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting"] }
url = "2"

[workspace.dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "postgres", "offline", "time"]

[workspace.dependencies.teloxide]
version = "0.11"
default-features = false
features = [
    "rustls",
    "ctrlc_handler",
    "throttle",
    "trace-adaptor",
    "macros",
    "erased",
]
