[workspace]
members = [
    "ilquentir-bot",
    "ilquentir-config",
    "ilquentir-messages",
    "ilquentir-models",
    "ilquentir-python-graph",
]

[workspace.package]
version = "0.11.1"
authors = ["utterstep"]

[workspace.dependencies]
dotenvy = "0.15"
color-eyre = "0.6"
envy = "0.4"
futures = "0.3"
once_cell = "1"
tracing = "0.1"
tracing-tree = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
url = "2"

[workspace.dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "postgres", "offline", "time"]

[workspace.dependencies.teloxide]
version = "0.12"
default-features = false
features = [
    "rustls",
    "ctrlc_handler",
    "throttle",
    "trace-adaptor",
    "macros",
    "erased",
]

[workspace.dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
    "time",
    "parking_lot",
    "process",
    "fs",
]
