[package]
name = "ilquentir-bot"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilquentir-config = { path = "../ilquentir-config" }
ilquentir-giphy = { path = "../ilquentir-giphy" }
ilquentir-graphs = { path = "../ilquentir-graphs" }
ilquentir-messages = { path = "../ilquentir-messages" }
ilquentir-models = { path = "../ilquentir-models" }

color-eyre = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

tonic = { version = "0.8", features = ["tls", "tls-roots"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = ["tls"] }
webpki-roots = "0.22"

dptree = "0.3"
teloxide = { workspace = true }

rand = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
