[package]
name = "ilquentir-config"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
humantime-serde = "1.1"
