[package]
name = "ilquentir-giphy"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
tracing = { workspace = true }

giphy = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip"] }
url = { workspace = true }
