[package]
name = "ilquentir-graphs"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilquentir-models = { path = "../ilquentir-models" }

color-eyre = { workspace = true }
indoc = { workspace = true }
time = { workspace = true }

regex = "1"
rasciigraph = "0.1"
