[package]
name = "ilquentir-messages"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9"

color-eyre = { workspace = true }
indoc = { workspace = true }
