[package]
name = "ilquentir-models"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
sqlx = { workspace = true }
teloxide = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
