[package]
name = "ilquentir-python-graph"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilquentir-config = { path = "../ilquentir-config" }
ilquentir-models = { path = "../ilquentir-models" }

color-eyre = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

csv = "1"
