[package]
name = "ilquentir-python-graph"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilquentir-config = { path = "../ilquentir-config" }
ilquentir-models = { path = "../ilquentir-models" }

color-eyre = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

aws-config = "0.52"
aws-sdk-s3 = "0.22"
bytes = "1.3"

csv = { version = "1.1" }
csv-async = { version = "1.2", features = ["tokio", "serde"] }

[dependencies.uuid]
version = "1.2"
features = [
    "v4",
    "fast-rng",
]
